--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ python:
   - "3.4"
 # command to install dependencies
 install:
-    "pip install -r test-requirements.txt"
-    "pip install coveralls"
+  - "pip install -r test-requirements.txt"
+  - "pip install coveralls"
 # command to run tests
 script: python setup.py test
 after_success: coveralls
