--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
   - "pip install -r test-requirements.txt"
   - "pip install coveralls"
 # command to run tests
-script: python setup.py test
+script: coverage run setup.py test
 after_success: coveralls
