__version__ moved to package root.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,5 +7,5 @@ tag = True
 
 [bumpversion:file:docs/conf.py]
 
-[bumpversion:file:src/morelia/base.py]
+[bumpversion:file:src/morelia/__init__.py]
 
