fixes #4 - background steps run twice when show_all_missing=True

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,10 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = clean,py27,py{33,34},status
+envlist = clean,py27,py{33,34,35},status
 
 [testenv]
+passenv = MORELIA_TAGS
 commands = {envpython} -m coverage run --append --branch --source src setup.py test
 deps =
     six==1.9.0
