fixed documentation rendering issues

--- a/tox.ini
+++ b/tox.ini
@@ -10,10 +10,8 @@ envlist = clean,py27,py{33,34,35},status
 passenv = MORELIA_TAGS
 commands = {envpython} -m coverage run --append --branch --source src setup.py test
 deps =
-    six==1.9.0
-    lxml==3.4.1
+    -rtest-requirements.txt
     coverage==3.7.1
-    mock==1.0.1
 
 [testenv:clean]
 commands = {envpython} -m coverage erase
