Support for python3.6. Modified CI pipeline.

--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,9 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = clean,py27,py{33,34,35},status
+envlist = py27,py{33,34,35,36},pypy
+skipsdist = true
 
 [testenv]
-passenv = MORELIA_TAGS
-commands = {envpython} -m coverage run --append --branch --source src setup.py test
-deps =
-    -rtest-requirements.txt
-    coverage==3.7.1
-
-[testenv:clean]
-commands = {envpython} -m coverage erase
-
-[testenv:status]
-commands =
-    {envpython} -m coverage report
-    {envpython} -m coverage html
+skip_install = true
+usedevelop = false
+whitelist_externals = /usr/bin/make
+commands = make devreq install test
