--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,32 @@
+# Config file for automatic testing at travis-ci.org
+# This file will be regenerated if you run travis_pypi_setup.py
+
 language: python
 python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-# command to install dependencies
+    - "2.7"
+    - "3.3"
+    - "3.4"
+    - "3.5"
+    - "3.6-dev"
+    - "pypy"
+
+# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-  - "pip install -r test-requirements.txt"
-  - "pip install coveralls"
-# command to run tests
-script: coverage run setup.py test
+    - "pip install coveralls"
+
+# command to run tests, e.g. python setup.py test
+script: make ci
 after_success: coveralls
+
+# After you create the Github repo and add it to Travis, run the
+# travis_pypi_setup.py script to finish PyPI deployment setup
+deploy:
+  provider: pypi
+  distributions: sdist bdist_wheel
+  user: dryobates
+  password:
+    secure: PLEASE_REPLACE_ME
+  on:
+    python: "3.5"
+    repo: kidosoft/morelia
+    tags: true
