--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,10 @@ universal = 1
 [flake8]
 exclude = docs
 
+[pep8]
+ignore=E501,E901
+exclude=.tox,.svn,CVS,.bzr,.hg,.git,__pycache__
+
 [coverage:paths]
 source =
     morelia/
