--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,8 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = docs
+ignore=E501,E901
+exclude=.tox,.svn,CVS,.bzr,.hg,.git,__pycache__
 
 [pep8]
 ignore=E501,E901
