Grouping paths for coveralls

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,5 +29,4 @@ exclude=.tox,.svn,CVS,.bzr,.hg,.git,__pycache__
 [coverage:paths]
 source =
     morelia/
-    .tox/*/lib/python*/site-packages/morelia/
-    .tox/pypy/site-packages/morelia/
+    /*/site-packages/morelia/
