--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ python:
     - "2.7"
     - "3.4"
     - "3.5"
-    - "3.6-dev"
-    - "pypy"
+    - "3.6"
+    - "3.7-dev"
+    - "pypy2.7"
+    - "pypy3.5"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
