--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ python:
     - "3.4"
     - "3.5"
     - "3.6"
-    - "3.7-dev"
-    - "pypy2.7"
+    # - "3.7-dev"
+    - "pypy"
     - "pypy3.5"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
