--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,8 @@
 
 language: python
 python:
-    - "2.7"
-    - "3.4"
     - "3.5"
     - "3.6"
-    - "pypy"
     - "pypy3.5"
 matrix:
     include:
@@ -22,7 +19,7 @@ install:
 script: make ci
 after_success: coveralls
 
-# After you create the Github repo and add it to Travis, run the
+# After you create the GitHub repo and add it to Travis, run the
 # travis_pypi_setup.py script to finish PyPI deployment setup
 deploy:
   provider: pypi
