Poetry for dependencies. closes #93.

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
+iisolated_build = true
 envlist = py{35,36,37},pypy3
 skipsdist = true
 
 [testenv]
-skip_install = true
-usedevelop = false
-whitelist_externals = /usr/bin/make
-commands = make devreq install test
+whitelist_externals = poetry
+commands = 
+    poetry install -v
+    poetry run pytest tests
