--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-    - "pip install coveralls"
+    - "pip install poetry coveralls"
 
 # command to run tests, e.g. python setup.py test
 script: make ci
