e Disabled black by default because of unsupported py35.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --cov=. --cov-branch --cov-report=term-missing --cov-report=xml --cov-report=html --flake8 --black
+addopts = --cov=morelia --cov=tests --cov=example --cov-branch --cov-report=term-missing --cov-report=xml --cov-report=html --flake8
