--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ skipsdist = true
 whitelist_externals = poetry
 commands = 
     poetry install -v
-    poetry run pytest tests
+    poetry run pytest
