--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,14 +3,15 @@ current_version = 0.7.1
 commit = True
 tag = True
 
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:docs/conf.py]
-search = version = '{current_version}'
-replace = version = '{new_version}'
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:morelia/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
+
